# Parallilos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  examples.cpp  main.cpp  test.cpp
examples/: Chronometro.hpp  ODR.cpp  examples.cpp  main.cpp  test.cpp
experimental/: Parallilos_array.hpp  Parallilos_int32.hpp  array_support.hpp  int32_support.hpp
include/: Parallilos.hpp
